--- a/.github/workflows/Day-06.yml
+++ b/.github/workflows/Day-06.yml
@@ -1,10 +1,10 @@
-name: Day-03
+name: Day-06
 
 on:
   workflow_dispatch:
   push:
     paths:
-      - '**03*'
+      - '**06*'
 
 jobs:
   build:
@@ -13,6 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cargo build
+        run: cargo build --release --verbose
       - name: Run
-        run: time target/release/aoc 03
+        run: time target/release/aoc 06
